fix: some layout issues on smaller screens

--- a/wine_cellar/assets/css/card.css
+++ b/wine_cellar/assets/css/card.css
@@ -27,7 +27,7 @@
     margin: 0;
   }
 
-  @media screen and (min-width: 48em) {
+  @media screen and (min-width: 64em) {
     width: calc(50% - 8px);
   }
 }
